--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
   margin: 0;
   padding: 0;
 }
-img {
-  margin: 100px 400px;
+.logo img {
+  margin: 100px 380px;
 }
 .menu {
   background-color: #dfeedb;
@@ -14,6 +14,7 @@ img {
   display: inline-block;
 }
 .menu a {
+  font-size: 30px;
   text-decoration: none;
 }
 .menu a:hover {
@@ -28,6 +29,28 @@ img {
 .menu li:hover .subMenu {
     display: block;
 }
-.subMenu li:hover {
-  background-color: gray;
+.slogan {
+  height: 800px;
+}
+.corporal {
+  background-color: #dfeedb;
+  column-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-top: 3%
+}
+
+article {
+  border: 1px solid black;
+  border-radius: 3px;
+  height: 200px;
+  margin: 25px 30px;
+}
+.corporal img {
+  height: 50px;
+  text-align: center;
+  width: 50px;
+}
+.corporal h1 {
+  text-align: center;
 }
