--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
 }
 .menu a {
   color: #3e3e3c;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
   padding: 0 20px;
   text-decoration: none;
@@ -63,6 +63,8 @@ main {
 
 /***** Slogan *****/
 .slogan h2 {
+  color: #3e3e3c;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 4em;
   margin: 1.8em;
   text-align: center;
